Fix Entry Page on Safari

--- a/src/components/Header/EntryPage.scss
+++ b/src/components/Header/EntryPage.scss
@@ -27,7 +27,7 @@
   font-weight: 400;
   padding-top: 6rem;
   text-shadow: 0.5rem 0.5rem 6.4rem #000;
-  z-index: -1;
+  z-index: 1;
 }
 
 .snd {
