--- a/src/components/Header/Navbar.scss
+++ b/src/components/Header/Navbar.scss
@@ -171,6 +171,7 @@
 
 .entry-page-header {
   display: block;
+  z-index: 1;
   position: absolute;
   background: linear-gradient(
     to top,
